<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- TOOLBAR -->
    <RelativeLayout
        android:id="@+id/toolbarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_alignParentTop="true"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="?attr/colorPrimary">
            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/abc_text_size_title_material_toolbar"
                android:text="CREATE ACCOUNT"/>
        </android.support.v7.widget.Toolbar>
        <RelativeLayout
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primary">
            <TextView
                android:id="@+id/statusText"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Create an account to use our services"/>
        </RelativeLayout>
    </RelativeLayout>


    <!-- CONTENT -->
    <RelativeLayout
        android:layout_below="@+id/toolbarContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" >
        <LinearLayout
            android:padding="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal">
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="username"/>
            <EditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="password"/>
            <EditText
                android:id="@+id/verifypassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="verify password"/>
            <Button
                android:id="@+id/createbutton"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="createAccountClick"
                android:text="CREATE ACCOUNT"/>
        </LinearLayout>

        <!-- PROGRESS WHEEL -->
        <ProgressBar
            android:id="@+id/progress"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_width="50dp"
            android:layout_height="50dp" />
    </RelativeLayout>
</RelativeLayout>
